--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,42 @@ a{
     border-radius: 22px;
     padding: 3px 14px 5px 14px;
 }
-
+.button {
+    position: relative;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #f72359;
+    padding: .8em 2.5em;
+    border: none;
+    color: white;
+    font-size: 1em;
+    cursor: pointer;
+    outline: none;
+    overflow: hidden;
+    border-radius: 100px;
+    width: 100%;
+  }
+  .button span {
+    position: relative;
+    pointer-events: none;
+  }
+  .button::before {
+    --size: 0;
+    content: '';
+    position: absolute;
+    left: var(--x);
+    top: var(--y);
+    width: var(--size);
+    height: var(--size);
+    background: radial-gradient(circle closest-side, #4405f7, transparent);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    transition: width .2s ease, height .2s ease;
+  }
+  .button:hover::before {
+    --size: 400px;
+  }
 /* menu */
 p {
     font-family: 'Poppins', sans-serif;
@@ -37,11 +72,13 @@ p {
     line-height: 1.7em;
     color: rgb(117, 117, 117);
 }
-
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+}
+.bg-dark {
+    background-color: #151a2b!important;
 }
 .card {
     border-bottom: 4px solid #36caf6!important;
@@ -78,8 +115,6 @@ a, a:hover, a:focus {
     align-items: stretch;
     perspective: 1500px;
 }
-
-
 #sidebar {
     min-width: 250px;
     max-width: 250px;
@@ -88,27 +123,22 @@ a, a:hover, a:focus {
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
 }
-
 #sidebar.active {
     margin-left: -250px;
     transform: rotateY(100deg);
 }
-
 #sidebar .sidebar-header {
     padding: 20px;
     background: #202843
 }
-
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
 }
-
 #sidebar ul p {
     color: #fff;
     padding: 10px;
 }
-
 #sidebar ul li a {
     padding: 10px;
     font-size: 1.1em;
@@ -116,15 +146,12 @@ a, a:hover, a:focus {
 }
 #sidebar ul li a:hover {
     color: #7386D5;
-    background: #fff;
+    background: #4689eb;
 }
-
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
     background: #3f4a6f;
 }
-
-
 a[data-toggle="collapse"] {
     position: relative;
 }
@@ -174,14 +201,12 @@ a.article, a.article:hover {
     min-height: 100vh;
     transition: all 0.3s;
 }
-
 #sidebarCollapse {
     width: 40px;
     height: 40px;
-    background: #343a40;
+    background: #151a2b;
     cursor: pointer;
 }
-
 #sidebarCollapse span {
     width: 80%;
     height: 2px;
@@ -191,7 +216,6 @@ a.article, a.article:hover {
     transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
     transition-delay: 0.2s;
 }
-
 #sidebarCollapse span:first-of-type {
     transform: rotate(45deg) translate(2px, 2px);
 }
@@ -201,15 +225,11 @@ a.article, a.article:hover {
 #sidebarCollapse span:last-of-type {
     transform: rotate(-45deg) translate(1px, -1px);
 }
-
-
 #sidebarCollapse.active span {
     transform: none;
     opacity: 1;
     margin: 5px auto;
 }
-
-
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
@@ -397,11 +417,10 @@ input{
     display: flex;
     flex: 1 1 auto;
 }
-
 .content-article{
     background-color: white;
-    border-radius: 27px;
-    margin-top: -25px;
+    border-radius: 7px;
+    margin:-42px 30px 20px 30px;
     /* height: 100vh; */
 }
 /* fica no topo para mostrar a taxa atual da Selic */
