--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,9 @@ p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     /* font-weight: 100; */
-    line-height: 1.7em;
+    line-height: 1.8em;
     color: rgb(117, 117, 117);
+
 }
 a, a:hover, a:focus {
     color: inherit;
@@ -108,20 +109,17 @@ a, a:hover, a:focus {
     /* margin-bottom: 40px; */
     /* box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1); */
 }
-
 .navbar-btn {
     box-shadow: none;
     outline: none !important;
     border: none;
 }
-
 .line {
     width: 100%;
     height: 1px;
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
 }
-
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -248,130 +246,6 @@ a.article, a.article:hover {
 /* ---------------------------------------------------
    FIM MENU
 ----------------------------------------------------- */
-/* Flex Container */
-.container-flex {
-	display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #232931;
-}
-.content{
-    background-color: #393e46;
-    border-radius: 15px; 
-    width: 60%;
-    height: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
-    position: relative; 
-}
-.content::before{
-    content: "";
-    border-radius: 17px 0px 0px 10px;
-    position: absolute;
-    /* background-color: #1a1d21; */
-    width: 40%;
-    height: 100%;
-    background: rgba(52,208,247,1);
-    background: -moz-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(52,208,247,1)), color-stop(100%, rgba(97,32,217,1)));
-    background: -webkit-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -o-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -ms-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: linear-gradient(to right, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#34d0f7', endColorstr='#6120d9', GradientType=1 );
-}
-.title{
-    font-size: 28px;
-    font-weight: bold;
-    text-transform: capitalize;
-}
-.title-white{
-    color: #fff;
-}
-.title-second{
-    background: -webkit-linear-gradient(rgba(52,208,247,1), rgba(97,32,217,1));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.description{
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 30px;
-}
-.btn{
-    border-radius: 15px;
-    text-transform: uppercase;
-    color:#fff;
-    font-size: 10px;
-    padding: 10px 50px;
-    cursor: pointer;
-    font-weight: bold;
-    border: none;
-}
-.btn-primary{
-  background-color: transparent;
-  border: solid 1px;
-}
-.btn-primary:hover{
-    background-color: #fff;
-    color:black;
-}
-.btn-second{
-    background: rgba(52,208,247,1);
-    background: -moz-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(52,208,247,1)), color-stop(100%, rgba(97,32,217,1)));
-    background: -webkit-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -o-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: -ms-linear-gradient(left, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    background: linear-gradient(to right, rgba(52,208,247,1) 0%, rgba(97,32,217,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#34d0f7', endColorstr='#6120d9', GradientType=1 );
-}
-.first-content{
-    display:flex;
-}
-.first-column{
-    text-align: center;
-    flex: 1 0 auto;
-    z-index: 10;
-}
-.second-column{
-    flex: 2 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.second-content{
-    position: absolute;
-    display: none;
-}
-.list-social-media{
-    display: flex;
-    list-style: none;
-    align-items: center;
-}
-.item-social-media {
-    border: 1px solid #6d7279;
-    border-radius: 50%;
-    color: #6d7279;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-}
-input{
-    border-radius: 6px;
-    background-color: #232931;
-    height: 30px;
-    border: none;
-    margin-bottom: 10px;
-}
-
 /* pagina curso */
 .padding-0{
     padding: 0 !important;
@@ -437,7 +311,7 @@ input{
 }
 .underline {
     content: '';
-    border-top: 2px solid #42ffff;
+    border-top: 2px solid #36caf6;
     width: 70px;
     display: block;
     margin-bottom: 8px;
@@ -498,10 +372,6 @@ input{
         top: 125px;
         }
     }
-
-/* ----------------------------------
-mobile
---------------------------------------- */
 @media (max-width: 600px) 
 {
     .content-article {
@@ -512,14 +382,14 @@ mobile
         display: none;
     }
 }
-
-
-
+/* Renda fixa */
 /* Tabs*/
-section {
-    padding: 60px 0;
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    border-color: #ffffff #ffffff #fff !important;
 }
-
+section {
+    /* padding: 60px 0; */
+}
 section .section-title {
     text-align: center;
     color: #007b5e;
@@ -527,13 +397,12 @@ section .section-title {
     text-transform: uppercase;
 }
 #tabs{
-	background: #007b5e;
+	/* background: #007b5e; */
     color: #eee;
 }
 #tabs h6.section-title{
     color: #eee;
 }
-
 #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     color: #f3f3f3;
     background-color: transparent;
@@ -543,16 +412,25 @@ section .section-title {
     font-weight: bold;
 }
 #tabs .nav-tabs .nav-link {
-    border: 1px solid transparent;
+    /* border: 1px solid #dadada; */
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
     color: #eee;
     font-size: 20px;
 }
+#tabs a{
+    color:rgb(75, 117, 231)!important;
+    background: -webkit-linear-gradient(#35caf6, #5f29db);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
-
-
-
-
+.mt-50{
+    margin-top: 50px;
+}
+.card-img-bg{
+    background-color: #2b2b2b91;
+    border-radius: 10px;
+}
 
 
