--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ ul{
     font-size: 1.1em;
     /* font-weight: 100; */
     line-height: 1.7em;
-    color: rgb(117, 117, 117);
+    color: rgb(255, 255, 255);
 }
 blockquote {
     border-left: 4px solid #3bb1f1;
@@ -95,6 +95,12 @@ blockquote {
     top: 84px;
 }
 /* menu */
+#content ul li b{
+    color: #36caf6;
+}
+.text-dark{
+    color:rgb(117, 117, 117);
+}
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -146,7 +152,7 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #333E61;
+    background: #202843;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -162,7 +168,7 @@ a, a:hover, a:focus {
 }
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    border-bottom: 1px solid #202843;
 }
 #sidebar ul p {
     color: #fff;
@@ -334,33 +340,7 @@ a.article, a.article:hover {
     MEDIAQUERIES
 ----------------------------------------------------- */
 @media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-        transform: rotateY(90deg);
-    }
-    #sidebar.active {
-        margin-left: 0;
-        transform: none;
-    }
-    #sidebarCollapse span:first-of-type,
-    #sidebarCollapse span:nth-of-type(2),
-    #sidebarCollapse span:last-of-type {
-        transform: none;
-        opacity: 1;
-        margin: 5px auto;
-    }
-    #sidebarCollapse.active span {
-        margin: 0 auto;
-    }
-    #sidebarCollapse.active span:first-of-type {
-        transform: rotate(45deg) translate(2px, 2px);
-    }
-    #sidebarCollapse.active span:nth-of-type(2) {
-        opacity: 0;
-    }
-    #sidebarCollapse.active span:last-of-type {
-        transform: rotate(-45deg) translate(1px, -1px);
-    }
+
     .icone2 {
         position: absolute;
         left: 53px;
